# bastion

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SESSION_SUMMARY.md  SKILL.md  SPEC.md  VERCEL_DEPLOY.md  chat.md  claude-session.jsonl  config.toml  demo_script.py  docker-compose.yml  entrypoint.sh  fly.toml  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prezenti-frontier-grant.md  skills-lock.json  test_sentinel.py
.agents/skills/bastion-how-to-use/: SKILL.md
.agents/skills/web2-api-firewall-administrator/: SKILL.md
.github/workflows/: ci.yml  publish-sdk.yml
apps/web/: .env.local  .gitignore  components.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/public/: _headers  auth.md  dashboard.md  index.md  integrate.md  webmcp.js
apps/web/src/: App.tsx  idl.json  main.tsx
crates/arcium/: Cargo.toml  SPEC.md
crates/arcium/src/: client.rs  evaluator.rs  evaluator_tests.rs  lib.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: event.rs  lib.rs
crates/core/src/audit/: mod.rs  record.rs
crates/core/src/decision/: mod.rs
crates/core/src/policy/: evaluator.rs  mod.rs  set.rs  types.rs
crates/core/src/risk/: mod.rs  oracle.rs  webacy.rs
crates/core/src/transaction/: mod.rs  normalized.rs
crates/correlation/: Cargo.toml
crates/correlation/src/: buffer.rs  engine.rs  lib.rs  rules.rs
crates/sidecar/: Cargo.toml  SPEC.md
crates/sidecar/src/: agents.rs  audit.rs  auth.rs  cases.rs  core_adapter.rs  did.rs  grond_oracle.rs  (+9 more)
crates/solana/: Anchor.toml
crates/web2-firewall/: Cargo.toml
crates/web2-firewall/src/: lib.rs  lib_test.rs
crates/web2-firewall/src/providers/: github.rs  mod.rs  openai.rs  slack.rs  stripe.rs
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
dashboard/src/: App.tsx  index.css
docs/: AGENT_OPS_LOG.md  ARCHITECTURE.md  ARCIUM_ARCHITECTURE_DECISION.md  ARCIUM_INTEGRATION.md  ARCIUM_INTEGRATION_SPEC.md  AUDIT_LOG.md  BASTION_MCP_X402_PLAN.md  CELO_DEPLOYMENT_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DELEGATION_SYSTEM.md  DEV_LOG.md  IMPROVEMENTS.md  LITEBEAM_COMPETITIVE_ANALYSIS.md  PRD_SIEM_EXPANSION.md  ROADMAP.md  ROBOT_FIREWALL.md  WEB2_EXPANSION_PLAN.md  demo.sh  rewrite.md
docs/grond-integration/: README.md
evm/: README.md  foundry.toml
evm/script/: DeployBastion.s.sol
evm/src/: BastionAudit.sol  BastionERC8004Registry.sol  BastionFirewall.sol  BastionPolicy.sol  BastionRegistry.sol  BastionSidecar.sol
evm/test/: BastionERC8004Registry.t.sol  BastionFullFlow.t.sol  BastionPolicyGas.t.sol  BastionSidecar.t.sol
midnight/: .gitignore  README.md  SPEC.md
midnight/contract/: audit.compact  policy.compact  registry.compact
midnight/dashboard/: index.html  package.json  tailwind.config.js
midnight/middleware/: Cargo.toml
midnight/middleware/src/: audit.rs  main.rs  policy.rs  prover.rs
midnight/sdk/: package.json
tests/: midnight_purge_test.sh
(+71 files in other folders)
