[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/sidecar",
    "crates/solana/programs/bastion-audit",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/bastion-agentic-defense/bastion"

[workspace.dependencies]
bastion-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Optimize build times for local development
[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
