[package]
name = "bastion-core"
version = "0.1.0"
edition = "2024"
description = "Chain-agnostic core types and policy engine for Bastion Agentique"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
