[package]
name = "bastion-web2-firewall"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bastion-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
http = "1"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
