[package]
name = "midnight-bastion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "midnight-bastion"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
sled = "0.34"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
config = "0.14"
dotenv = "0.15"
